--- a/templates/index.html
+++ b/templates/index.html
@@ -175,6 +175,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
+       
       <!-- Sidebar -->
       <div class="col-lg-3 col-xl-2 d-none d-lg-block sidebar p-0">
         <div class="d-flex align-items-center p-3 border-bottom">
@@ -184,7 +185,7 @@
         <div class="p-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link active" href="{% url 'home' %}">
                 <i class="bi bi-house"></i> Dashboard
               </a>
             </li>
@@ -194,7 +195,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{% url 'add_edit_waste_type' 'new' %}">
                 <i class="bi bi-trash"></i> Waste Types
               </a>
             </li>
@@ -205,7 +206,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{% url 'users' %}">
                 <i class="bi bi-people"></i> Staff
               </a>
             </li>
@@ -215,7 +216,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="{% url 'messages' %}">
                 <i class="bi bi-chat-square-text"></i> Messages
               </a>
             </li>
@@ -233,6 +234,7 @@
           </ul>
         </div>
       </div>
+      {% block content %}
 
       <!-- Main Content -->
       <div class="col-lg-9 col-xl-10 ms-auto p-0">
@@ -598,6 +600,7 @@
           </div>
         </div>
       </div>
+       {% endblock %}
     </div>
   </div>
 
