--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -86,14 +86,14 @@
   <!-- Dashboard Content -->
   <div class="p-4">
     <div class="mb-4">
-      <h1 class="h3 fw-bold" style="color: var(--secondary-color);">Waste Collection Agencies</h1>
+      <h1 class="h3 fw-bold" style="color: var(--secondary-color);">Users</h1>
       <p class="text-muted small">Overview of waste collection agencies and pickup services</p>
     </div>
 
     <div class="col-lg-6">
       <div class="card h-100">
         <div class="card-header bg-white border-0 pb-0">
-          <h5 class="card-title">Agencies</h5>
+          <h5 class="card-title">Users</h5>
           <!-- <p class="text-muted small">Next 24 hours</p> -->
           <a href="{% url 'add_user' %}">Add User</a>
         </div>
